--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ margin-top: 15px;
 .listaAvisos
 {
     list-style: none;
+    border: 5px solid #337ab7;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 15px;
 }
 #footer
 {
@@ -193,4 +197,31 @@ border-color: #464a4c;
 
 .container_form{
    width: 800px;  
+}
+
+.imagenListaAvisos
+ {
+   height: 15%;
+    width: 50%;
+        display: block;
+    max-width: 100%;
+}
+
+.dashBorder
+{
+    border-left: 5px dashed #337ab7;
+    border-right: 5px dashed #337ab7;
+}
+
+.tituloListaAvisos
+{
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 20px;
+    color: #337ab7;
+}
+
+.textoAvisoNegrita
+{
+    font-weight: bold;  
 }
